Changes in log format, make columns in test cases info ssortable

--- a/galina/src/apps/styles/LoadTestInfoApp.css
+++ b/galina/src/apps/styles/LoadTestInfoApp.css
@@ -56,6 +56,13 @@ body {
     color:rgb(150, 108, 35);
 
 }
+.header-2 {
+   padding: 10px 10px 10px 5px;
+   font-size: 17px;
+   color:rgb(150, 108, 35);
+   cursor: pointer;
+
+}
 tr,td {
     border: 1px solid black;
     
